# tdd_project

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
store/: main.py
store/controllers/: product.py
store/core/: config.py
store/models/: base.py
store/schemas/: product.py
store/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: factories.py  test_product.py
tests/usecases/: test_product.py
