[tool.poetry]
name = "tdd-project"
version = "0.1.0"
description = ""
authors = ["Aléxis Rodrigues de Almeida <alexis.almeida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
